TiffIFD: adding JSON StringFormat